# symmath

./: .travis.yml  CMakeLists.txt  Dockerfile
symmath/: calculus.hpp  expressions.hpp  matrix.hpp  numerics.hpp  probability.hpp  symbolic.hpp  symmath.hpp  tensors.hpp
symmath/expression/: apply.hpp  equals.hpp  expression.hpp
symmath/expressions/: expression.hpp  variable.hpp
symmath/expressions/inequality/: equal.hpp  greater_than.hpp  greater_than_equal.hpp  less_than.hpp  less_than_equal.hpp
symmath/function/: function.hpp
symmath/functions/: codomain.hpp  domain.hpp  function.hpp  map.hpp
symmath/functions/elementary/: exponential.hpp  logarithmic.hpp  polynomial.hpp  trigonometric.hpp
symmath/functions/special/: indicator.hpp  step.hpp
symmath/matrix/: matrix.hpp  scalar.hpp  storage.hpp  vector.hpp
symmath/number/: complex.hpp  integer.hpp  natural.hpp  number.hpp  real.hpp
symmath/numerics/: complex.hpp  integer.hpp  natural.hpp  number.hpp  real.hpp  scalar.hpp  tensor.hpp  variable.hpp  vector.hpp
symmath/numerics/sets/: complex_numbers.hpp  integers.hpp  naturals.hpp  reals.hpp
symmath/operation/: add.hpp  arithmetic.hpp  binary_operation.hpp  div.hpp  inner_product.hpp  inv.hpp  linear.hpp  mul.hpp  neg.hpp  norm.hpp  operation.hpp  pow.hpp  scalar_mul.hpp  sub.hpp  unary_operation.hpp
symmath/operations/: add.hpp  addition.hpp  algebraic.hpp  arity.hpp  assignment.hpp  basic.hpp  binary_operation.hpp  calculus.hpp  direct_sum.hpp  div.hpp  dsum.hpp  has_tensor_addition.hpp  has_tensor_multiplication.hpp  inner_product.hpp  intersection.hpp  inv.hpp  inverse_element.hpp  mul.hpp  multiplication.hpp  neg.hpp  norm.hpp  operation.hpp  pow.hpp  probability.hpp  scalar_mul.hpp  scalar_multiplication.hpp  sets.hpp  sub.hpp  sum.hpp  tensor_prod.hpp  tensor_product.hpp  tensors.hpp  total_order.hpp  unary_operation.hpp  union.hpp
symmath/operations/algebraic/: abs.hpp  add.hpp  conj.hpp  div.hpp  exp.hpp  factorial.hpp  inv.hpp  mul.hpp  neg.hpp  pow.hpp  prod.hpp  sub.hpp  sum.hpp
symmath/operations/basic/: abs.hpp  add.hpp  conj.hpp  div.hpp  exp.hpp  inv.hpp  (+7 more)
symmath/probability/: probability_distribution.hpp  probability_measure.hpp  random_variable.hpp
symmath/properties/: addition.hpp  additive_inverse.hpp  associative_property.hpp  closure_property.hpp  commutative_property.hpp  countable.hpp  direct_sum.hpp  distributive_property.hpp  dummy.hpp  has_add.hpp  has_addition.hpp  has_additive_inverse.hpp  has_algebra.hpp  has_algebraic_operations.hpp  has_assign.hpp  has_assignment.hpp  has_closure.hpp  has_division.hpp  has_exponentiation.hpp  has_identity_element.hpp  has_inverse_element.hpp  has_mul.hpp  has_multiplication.hpp  has_multiplicative_inverse.hpp  has_negation.hpp  has_operation.hpp  has_order.hpp  has_properties.hpp  has_scalar_multiplication.hpp  has_something.hpp  has_subtraction.hpp  has_tensor_addition.hpp  has_tensor_multiplication.hpp  has_value.hpp  has_value_array.hpp  identity_element.hpp  inner_product.hpp  inverse_element.hpp  multiplication.hpp  multiplicative_inverse.hpp  (+7 more)
symmath/property_traits/: abstract_type.hpp  addable.hpp  comparable.hpp  computable.hpp  either.hpp  has_property.hpp  invertible.hpp  is_abelian_group.hpp  is_field.hpp  is_group.hpp  is_monoid.hpp  is_ring.hpp  is_scalar.hpp  mathematical_object.hpp  multipliable.hpp  negatable.hpp  requires.hpp  value_type.hpp
symmath/scalar/: scalar.hpp
symmath/set/: intersection.hpp  set.hpp  union.hpp
symmath/sets/: closed_interval.hpp  element_of.hpp  empty_set.hpp  finite_set.hpp  interval.hpp  manifold.hpp  metric_space.hpp  open_interval.hpp  pair.hpp  sequence.hpp  set.hpp  subset.hpp  superset.hpp  toppological_space.hpp  tuple.hpp
symmath/tensors/: covector.hpp  matrix.hpp  scalar.hpp  tensor.hpp  tensor_initializer.hpp  variable.hpp  vector.hpp
symmath/type_traits/: add_const.hpp  add_const_ref.hpp  boolean.hpp  boolean_logic.hpp  conditional.hpp  conjunction.hpp  covariant.hpp  covariant_result.hpp  covariant_type.hpp  detect.hpp  disable_if.hpp  enable_if.hpp  has.hpp  has_property.hpp  is_abelian_group.hpp  is_applicable.hpp  is_basic_number.hpp  is_complex.hpp  is_constructible.hpp  is_detected.hpp  is_element.hpp  is_element_of.hpp  is_field.hpp  is_floating_point.hpp  is_group.hpp  is_integral.hpp  is_lvalue.hpp  is_lvalue_ref.hpp  is_number.hpp  is_numeric.hpp  is_operation.hpp  is_property_of.hpp  is_ring.hpp  is_rvalue.hpp  is_rvalue_ref.hpp  is_same.hpp  is_same_result.hpp  is_scalar.hpp  is_set.hpp  is_storage_object.hpp  (+12 more)
symmath/variable/: variable.hpp
symmath/vector/: vector.hpp
test/: CMakeLists.txt  test_complex.cc  test_dummy.cc  test_integer.cc  test_main.cc  test_matrix.cc  test_natural.cc  test_number.cc  test_operation.cc  test_real.cc  test_scalar.cc  test_variable.cc  test_vector.cc
test/expressions/: test_variable.cc
test/functions/: test_function.cc
test/matrix/: test_matrix.cc  test_scalar.cc
test/numerics/: test_complex.cc  test_integer.cc  test_natural.cc  test_operations.cc  test_real.cc  test_variable.cc
test/sets/: test_finite_set.cc  test_reals.cc  test_sets.cc
test/tensors/: test_covector.cc  test_matrix.cc  test_scalar.cc  test_tensor.cc  test_tensor_initializer.cc  test_vector.cc
test/type_traits/: test_boolean.cc  test_conditional.cc  test_covariant.cc  test_covariant_result.cc  test_covariant_type.cc  test_detect.cc  test_result_type.cc
(+55 files in other folders)
